--- a/first-app/src/styles.css
+++ b/first-app/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  background: url(./assets/congruent_outline.png);
+  color: #FFF;
+}
+
+h1 {
+  color: #fff;
+}
+
+.description {
+  font-style: italic;
+  color: lightseagreen;
+}
