--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -6,6 +6,6 @@
   Keeping track of media i want to watch.
 </p>
 
-<app-media-item
-[mediaItem] = "firstMediaItem"
-(delete)="onMediaItemDelete($event)"></app-media-item>
+<mw-reactive-media-item-form></mw-reactive-media-item-form>
+<!--<mw-media-item-form></mw-media-item-form>-->
+<mw-media-item-list></mw-media-item-list>
