--- a/first-app/src/app/components/reactive-media-item-form/reactive-media-item-form.component.html
+++ b/first-app/src/app/components/reactive-media-item-form/reactive-media-item-form.component.html
@@ -11,13 +11,17 @@
     <li>
       <label for="medium">Medium</label>
       <select name="medium" id="medium"  formControlName="medium">
-        <option value="Movies">Movies</option>
-        <option value="Series">Series</option>
+        <!--<option value="Movies">Movies</option>
+        <option value="Series">Series</option>-->
+        <option *ngFor="let medium of lookupLists.mediums" value= "{{medium}}">{{medium}}</option>
       </select>
     </li>
     <li>
       <label for="name">Name</label>
       <input type="text" name="name" id="name" formControlName="name"/>
+      <div *ngIf="form.controls.name.errors?.pattern" class="error">
+        Name has invalid characters.
+      </div>
     </li>
     <li>
       <label for="category">Category</label>
@@ -33,9 +37,12 @@
         <li>
       <label for="year">Year</label>
       <input type="text" name="year" id="year" formControlName="year"/>
+      <div *ngIf="form.controls.year.errors?.year" class="error">
+        Must be between {{form.controls.year.errors?.year.min}} and {{form.controls.year.errors?.year.max}}.
+      </div>
     </li>
   </ul>
 
 
-  <button type="submit">Submit</button>
+  <button type="submit" [disabled]="!form.valid">Submit</button>
 </form>
